<resources>
    <string name="app_name">MJDeviceTestApp</string>
    <string name="AutoTest">Auto test</string>
    <string name="CheckVersion">Check Version</string>
    <string name="CheckSN">Check Serial Number</string>
    <string name="Upgrade">Upgrade</string>
    <string name="upgrade_complete">System upgrade is complete!</string>
    <string name="upgrade_failed">System upgrade failed!</string>
    <string name="calibration_complete">Calibration is complete!</string>
    <string name="calibration_failed">Calibration failed!</string>
    <string name="ble_write_mac_complete">BLE Mac Address has been written successfully!</string>
    <string name="ble_write_mac_failed">BLE Mac Address failed to write!</string>
    <string name="device_write_sn_complete">Serial number has been written successfully!</string>
    <string name="device_write_sn_failed">Serial number failed to write!</string>
    <string name="device_serial_number">Serial Number</string>
    <string name="device_hand_shake_status">Hand Shake Status</string>
    <string name="Packageerror">Error! Application package not found!</string>
    <string name="PackageIerror">Inner error</string>
    <!-- GSensor -->
    <string name="Sensor">Sensor</string>
    <string name="Vibrator">Vibrator</string>
    <string name="Signal">Telephone</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Bluetooth_open">Bluetooth is already ON</string>
    <string name="Bluetooth_opening">Bluetooth is turning on now...</string>
    <string name="Bluetooth_scaning">Scanning...</string>
    <string name="Bluetooth_mac">MAC address...</string>
    <string name="Bluetooth_scan_success">Scanning completed</string>
    <string name="GSensor">G-sensor</string>
    <string name="GSensor_info">Put the device vertically, horizontally  on its side and then observe the changing of gravity</string>
    <string name="GSensor_calibrate">G-sensor calibration</string>
    <string name="PSensor_calibrate">PSensor_calibrate</string>
    <!--MSensor part -->
    <string name="MSensor">M-sensor</string>
    <string name="MSensor_default_text">Unknown data</string>
    <string name="MSensor_North">North</string>
    <string name="MSensor_East">East</string>
    <string name="MSensor_South">South</string>
    <string name="MSensor_West">West</string>
    <string name="MSensor_north_east">Northeast</string>
    <string name="MSensor_south_east">Southeast</string>
    <string name="MSensor_south_west">Southwest</string>
    <string name="MSensor_north_west">Northwest</string>
    <string name="LSensor">L-sensor</string>
    <string name="LSensor_default_text">Unknown data</string>
    <string name="LSensor_accuracy">Accuracy:</string>
    <string name="LSensor_value">Value:</string>
    <string name="LSensor_tips">Observe the changing of values in strong light and darkness</string>
    <string name="Success">Pass</string>
    <string name="Failed">Fail</string>
    <string name="Retest">Retest</string>
    <string name="Exit">Exit</string>
    <string name="psensor_hello">P-Sensor</string>
    <string name="psensor_app_name">Proximity sensor</string>
    <string name="proximity">Approach:</string>
    <string name="tips">Please observe the changing of values as you put your hands in the sensing area and move your hands away from the area</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="gsensor_name">G-sensor</string>
    <string name="msensor_name">M-sensor</string>
    <string name="lsensor_name">L-sensor</string>
    <string name="psensor_name">P-sensor</string>
    <string name="KeyCode_name">Keys</string>
    <string name="KeyCode">Keys</string>
    <string name="KeyCode_info">Please start pressing keys</string>
    <string name="Report">Test report</string>
    <string name="report_ok">Successful test items:</string>
    <string name="report_failed">Failed test items:</string>
    <string name="report_notest">Untested items:</string>
    <string name="version">Version</string>
    <string name="version_info">Version Information:</string>
    <string name="device_info_default">Unknown</string>
    <string name="complate_fmtest">Please complete device test!</string>
    <string name="str_smt_test">SMT test</string>
    <string name="gyroscopesensor_name">Gyroscopesensor</string>
    <string name="gyroscopesensor_value">Gyroscopesensor Data</string>
    <string name="tsensor_name">Temperature</string>
    <string name="tsensor_value">Current Temperature:</string>
    <string name="StartTest">Connect to Device</string>
    <string name="tsensor_app_name">Temperature sensor</string>
    <string name="keycode_back">Back</string>
    <string name="keycode_vol_up">VolumeUp</string>
    <string name="keycode_vol_down">VolumeDown</string>
    <string name="keycode_button_l2">ButtonL2(Ok)</string>
    <string name="keycode_button_l1">ButtonL1(Back)</string>
    <string name="keycode_button_y">ButtonY(Menu/Power)</string>
    <string name="keycode_tp_singleclick">(TP)SingleClick</string>
    <string name="keycode_tp_doubleclick">(TP)DoubleClick</string>
    <string name="keycode_tp_up">(TP)��</string>
    <string name="keycode_tp_down">(TP)��</string>
    <string name="keycode_tp_left">(TP)��</string>
    <string name="keycode_tp_right">(TP)��</string>
    <string name="keycode_joystick_info">Joystick Key Test</string>
    <string name="keycode_touchpad_info">Touchpad Test</string>
    <string name="device_manufacturer">Manufacturer</string>
    <string name="device_productname">ProductName</string>
    <string name="device_version_stm32">STM32 Version</string>
    <string name="device_version_ble">BLE Version</string>
    <string name="device_version_63813">63813 Version</string>
    <string name="device_ble_state">Bluetooth JoyStick State</string>
    <string name="device_ble_mac_addr">Bluetooth MAC Address</string>
    <string name="packetdata_header">PacketHeader</string>
    <string name="packetdata_timestamp">Timestamp</string>
    <string name="device_unknown">Unknown</string>
    <string name="ble_test">BLE 63813 Test</string>
    <string name="ble_test_tip">BLE 63813 Test OK!</string>
    <string name="usb_storage_info">USB Storage Info</string>
    <string name="setting">Setting</string>
    <string name="about_us">About</string>
    <string name="about_us_info">Version</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->
    <!-- General settings -->
    <string name="pref_header_general_setting">General Setting</string>
    <string name="pref_title_mode">Enable factory mode</string>
    <string name="pref_description_mode">Factory mode could be used for test pcb in factory</string>
    <string name="pref_title_auto_test">Enable Auto Test mode</string>
    <string name="pref_description_auto_test">If auto test mode is on, the app will check version, ble address and serial number when it starts. </string>
    <string name="pref_title_set_test_timeout">Set item test timeout</string>
    <string-array name="pref_timeout_list_titles" translatable="false">
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
        <item>60s</item>
        <item>120s</item>
    </string-array>
    <string-array name="pref_timeout_list_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <!-- Version settings -->
    <string name="pref_header_version_setting">Version Setting</string>
    <string name="pref_title_version_check_stm32">STM32 Version</string>
    <string name="pref_title_version_check_ble">BLE Version</string>
    <string name="pref_title_version_check_63813">63813 Version</string>
    <!-- Sensor settings -->
    <string name="pref_header_sensor_setting">Sensor Setting</string>
    <string name="pref_title_accel_full_scale_select">Accel Full Scale Select Range[2,16]g</string>
    <string name="pref_title_gyro_full_scale_select">Gyro Full Scale Select Range[250,2000]dps</string>
    <string name="pref_title_proximity_threshold_approach">Proximity Threshold Approach Range[200, 4000]</string>
    <string name="pref_title_light_threshold_approach">Light Threshold Approach Range[10, 2000]</string>
    <string name="pref_title_temp_range_min">Temperature Range Min[-40, 85]��</string>
    <string name="pref_title_temp_range_max">Temperature Range Max[-40, 85]��</string>
    <string name="pref_title_magnetic_yaw_offset">Magnetic Yaw Offset[0, 360]d</string>
</resources>
