<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_margin="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_manufacturer"
                    android:id="@+id/textViewDeviceManufacturer"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_productname"
                    android:id="@+id/textViewDeviceProductName"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_version_ble"
                    android:id="@+id/textViewVersionBLE"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_version_63813"
                    android:id="@+id/textViewVersion63813"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_version_stm32"
                    android:id="@+id/textViewVersionStm32"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_ble_state"
                    android:id="@+id/textViewJoySickState"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_ble_mac_addr"
            android:id="@+id/textViewBleAddr"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_serial_number"
            android:id="@+id/textViewSN"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Packet"
            android:id="@+id/textViewPacket"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_hand_shake_status"
            android:id="@+id/textViewHandShakeStatus"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb_storage_info"
            android:id="@+id/textViewUsbStorageInfo"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5" >

        <Button
            android:id="@+id/main_bt_autotest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/AutoTest"
            android:textSize="24sp"
            android:background="@drawable/btn_default"
            android:gravity="center_vertical|center|center_horizontal" />

        <Button
            android:id="@+id/main_bt_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/StartTest"
            android:textSize="24sp"
            android:background="@drawable/btn_default"
            android:gravity="center_vertical|center|center_horizontal" />
    </LinearLayout>

    <GridView
        android:id="@+id/main_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dip"
        android:verticalSpacing="1dip"
        android:horizontalSpacing="1dip"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:numColumns="auto_fit" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|fill"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GSensor_calibrate"
            android:id="@+id/main_bt_calibration"
            android:textSize="24sp"
            android:background="@drawable/btn_default"
            android:gravity="center_vertical|center|center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Upgrade"
            android:id="@+id/main_bt_upgrade"
            android:textSize="24sp"
            android:background="@drawable/btn_default"
            android:gravity="center_vertical|center|center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckVersion"
                android:id="@+id/main_bt_checkversion"
                android:textSize="22sp"
                android:background="@drawable/btn_default"
                android:gravity="center_vertical|center|center_horizontal"
                android:layout_weight="0.3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_test"
                android:id="@+id/main_bt_ble_cy7c63813"
                android:textSize="22sp"
                android:background="@drawable/btn_default"
                android:gravity="center_vertical|center|center_horizontal"
                android:layout_weight="0.4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckSN"
                android:id="@+id/main_bt_checksn"
                android:textSize="22sp"
                android:background="@drawable/btn_default"
                android:gravity="center_vertical|center|center_horizontal"
                android:layout_weight="0.3" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>