<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/gyroscopesensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyroscopesensor_value"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/gyroscopesensor_bt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Success"
                android:textSize="60sp" />

            <Button
                android:id="@+id/gyroscopesensor_bt_failed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Failed"
                android:textSize="60sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>