<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="right" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/keycode_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/KeyCode_info"
            android:textSize="30sp" />

        <GridView
            android:id="@+id/keycode_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dip"
            android:verticalSpacing="1dip"
            android:horizontalSpacing="1dip"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:layout_below="@+id/keycode_info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keycode_joystick_info"
            android:id="@+id/keycode_joystick"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/keycode_grid" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/paint_root"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/linearLayout2"
            android:layout_below="@+id/keycode_joystick"
            android:gravity="center|fill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout2">

            <Button
                android:id="@+id/keycode_bt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Success"
                android:textSize="60sp" />

            <Button
                android:id="@+id/keycode_bt_failed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Failed"
                android:textSize="60sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>